# ComputerGraphics

./: LICENSE
ConsoleApplication1/: Background.cpp  Background.h  Basic.h  CMakeLists.txt  ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  GeomUtils.cpp  GeomUtils.h  MyGame.cpp  Nemico.cpp  Nemico.h  PartSystem.cpp  PartSystem.h  ShaderMaker.cpp  Stelle.cpp  Stelle.h  fragmentShaderCM.glsl  packages.config  vertexShaderCM.glsl
es02/: 02_main.cpp  CG02.vcxproj  CG02.vcxproj.filters  edit.sln  figure.cpp  figure.h  includes.h  neuron.cpp  neuron2.cpp  packages.config  sound.cpp  sound.h  text.cpp  text.h
es03/: LAB_03.cpp  Lab03.sln  Lab03.vcxproj  Lab03.vcxproj.filters
es03/Shaders/: f_glitch.glsl  f_radiation.glsl  v_glitch.glsl  v_pulsing.glsl  v_toon.glsl  v_wave.glsl
es04/: es04.sln  es04.vcxproj  es04.vcxproj.filters  run_LAB_04.bat
es04/LAB_04_students/: LAB_04_students.cpp  argparser.h  raytracer_students.cpp
es05/Blender rendering&texturing/: PorticoStart_2023.blend  PorticoStart_2023.blend1
